query builder work

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -77,6 +77,7 @@
   "2b1yD3": "(UTC+12:00) Auckland, Wellington",
   "2cVEMV": "Returns a single value matching the key name from form-data or form-encoded action output",
   "2gzGrJ": "Required. The name of the action with a form-data or form-encoded response.",
+  "2oe1NN": "Hide Dynamic Content",
   "2ri1Kf": "(UTC+02:00) Damascus",
   "2tTQ0A": "On",
   "2wJZkB": "Empty add dynamic content button",
@@ -628,6 +629,7 @@
   "_2b1yD3.comment": "Timezone value ",
   "_2cVEMV.comment": "Label for description of custom formDataValue Function",
   "_2gzGrJ.comment": "Required string parameter to identify action name for formDataValue function",
+  "_2oe1NN.comment": "Hide Token Picker Button",
   "_2ri1Kf.comment": "Timezone value ",
   "_2tTQ0A.comment": "label when setting is on",
   "_2wJZkB.comment": "Alt text for empty dynamic content icon",
