--- a/libs/designer/src/lib/docs/Introduction.stories.mdx
+++ b/libs/designer/src/lib/docs/Introduction.stories.mdx
@@ -7,11 +7,12 @@ import { Meta } from '@storybook/addon-docs';
 ## Requirements
 
 - Node v14+
-- MkCert 
-*One Time Only*
-Install from instructions found at: https://github.com/FiloSottile/mkcert
+- MkCert
+  _One Time Only_
+  Install from instructions found at: https://github.com/FiloSottile/mkcert
 
 Make Sure to run:
+
 ```bash
 mkcert -install
 ```
