[DM | Test Map Panel] Confirm and finalize test map functionality (#1078)
* Confirm and finalize test map functionality

* Match heights for editors

* Abstract common editor props

Co-authored-by: Nicolas Layne <nicolaslayne@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -419,6 +419,7 @@
   "Q4TUFX": "Discard",
   "QBOaAu": "Select a source schema",
   "QEp3C8": "Convert the input to a JSON type value",
+  "QGbUXX": "Status code",
   "QQYzHC": "Context menu for {title} card",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
@@ -973,6 +974,7 @@
   "_Q4TUFX.comment": "Button text for discard the unsaved changes",
   "_QBOaAu.comment": "placeholder for selecting the source schema dropdown",
   "_QEp3C8.comment": "Label for description of custom json Function",
+  "_QGbUXX.comment": "Response status code for test map API",
   "_QQYzHC.comment": "Accessability label",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
@@ -1327,6 +1329,7 @@
   "_oM6q96.comment": "Text for the Browse Operations page navigation heading",
   "_oRvVIW.comment": "Timezone value ",
   "_oV0xQ9.comment": "Placeholder text for workflow overview filter input",
+  "_odQ554.comment": "Response body for test map API",
   "_ol+TkT.comment": "Timezone value ",
   "_orhWzV.comment": "error message for loading the schema",
   "_oxH1L/.comment": "Timezone value ",
@@ -1726,6 +1729,7 @@
   "oM6q96": "Browse Operations",
   "oRvVIW": "(UTC+07:00) Krasnoyarsk",
   "oV0xQ9": "Enter the run identifier to open the run",
+  "odQ554": "Response body",
   "ol+TkT": "(UTC-03:00) Salvador",
   "orhWzV": "Failed loading the schema. Please try again.",
   "oxH1L/": "(UTC-07:00) Chihuahua, La Paz, Mazatlan",
