Circular logic validation for Function nodes, and properly set source connections outputs

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -364,6 +364,7 @@
   "NPUFgH": "Status",
   "NeyUAh": "(UTC-03:00) City of Buenos Aires",
   "NkUgXU": "(UTC+03:00) Minsk",
+  "Nn/DN4": "This connection would introduce circular logic.",
   "NnD8gF": "Invalid operation path input value. Path value - {pathValue} Path template - {pathTemplate}",
   "No6CS+": "Enter tenant",
   "NoXs0l": "Please select an identity",
@@ -919,6 +920,7 @@
   "_NPUFgH.comment": "Label text for retry status",
   "_NeyUAh.comment": "Timezone value ",
   "_NkUgXU.comment": "Timezone value ",
+  "_Nn/DN4.comment": "Error message for circular logic connection validation",
   "_NnD8gF.comment": "Error message while parsing ",
   "_No6CS+.comment": "Tenant Placeholder Text",
   "_NoXs0l.comment": "MSI Identity Placeholder Text",
