--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1194,6 +1194,7 @@
   "_fGcSFd.comment": "error message for max-exceeding paging count",
   "_fLSetk.comment": "label to inform the below schema name is for source schema",
   "_faSDuD.comment": "Timezone value ",
+  "_fc1AV8.comment": "Callback url method",
   "_fg/34o.comment": "Label for logical functions",
   "_froV/0.comment": "Timezone value ",
   "_ftwXvc.comment": "This is a status message to be shown in a monitoring view",
@@ -1594,6 +1595,7 @@
   "fGcSFd": "Paging count exceeds maximum value",
   "fLSetk": "Source schema",
   "faSDuD": "(UTC+04:00) Port Louis",
+  "fc1AV8": "HTTP {method} URL",
   "fg/34o": "Logical functions",
   "froV/0": "(UTC+04:30) Kabul",
   "ftwXvc": "Ignored",
