--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1194,6 +1194,7 @@
   "_fGcSFd.comment": "error message for max-exceeding paging count",
   "_fLSetk.comment": "label to inform the below schema name is for source schema",
   "_faSDuD.comment": "Timezone value ",
+  "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
   "_fg/34o.comment": "Label for logical functions",
   "_froV/0.comment": "Timezone value ",
@@ -1595,6 +1596,7 @@
   "fGcSFd": "Paging count exceeds maximum value",
   "fLSetk": "Source schema",
   "faSDuD": "(UTC+04:00) Port Louis",
+  "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
   "fg/34o": "Logical functions",
   "froV/0": "(UTC+04:30) Kabul",
