Lumping this one in too as its also just a string update

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -110,13 +110,13 @@
   "4Q7WzU": "Add a new connection",
   "4XdZNj": "(UTC+01:00) West Central Africa",
   "4YKQAF": "Required. The unit of time specified in the interval.",
+  "4aaixN": "Tour",
   "4c0uPQ": "Required. The name of the parameter whose values you want.",
   "4cVuMw": "Comments can only be added while editing the inputs of a step.",
   "4j2MEv": "Toggle Minimap",
   "4pm5yw": "Button to add dynamic content if TokenPicker is hidden",
   "4vcnOA": "Returns the minimum value in the input array of numbers",
   "4vmGh0": "Service request ID",
-  "4wavwk": "Tour/Tutorial",
   "4wjJs0": "14",
   "4yC+4g": "Action Type",
   "5J7j9k": "Required. The XPath expression to evaluate.",
@@ -144,6 +144,7 @@
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
+  "7WVgiU": "Configure",
   "7ZR1xr": "Add an action",
   "7aJqIH": "Optional. The locale to be used when formatting (defaults to 'en-us').",
   "7k9jXx": "Status code",
@@ -665,13 +666,13 @@
   "_4Q7WzU.comment": "Aria label description for add button",
   "_4XdZNj.comment": "Timezone value ",
   "_4YKQAF.comment": "Required string parameter to represent the unit of time",
+  "_4aaixN.comment": "Button text for tour and tutorial",
   "_4c0uPQ.comment": "Required string parameter to create a new parameter",
   "_4cVuMw.comment": "Text to tell users why a comment is disabled",
   "_4j2MEv.comment": "Turn the minimap on or off",
   "_4pm5yw.comment": "Text for if image does not show up",
   "_4vcnOA.comment": "Label for description of custom min Function",
   "_4vmGh0.comment": "Label text for retry service request ID",
-  "_4wavwk.comment": "Button text for tour and tutorial",
   "_4wjJs0.comment": "Hour of the day",
   "_4yC+4g.comment": "Filter by action type",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
@@ -699,6 +700,7 @@
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
+  "_7WVgiU.comment": "Button text for opening the configuration",
   "_7ZR1xr.comment": "Text on example action node",
   "_7aJqIH.comment": "Optional locale parameter to apply formatNumber function with",
   "_7k9jXx.comment": "Label text for response status code",
@@ -1142,7 +1144,6 @@
   "_c3G/zq.comment": "Label for description of custom setProperty Function",
   "_c6XbVI.comment": "label for panel component",
   "_c8UPLp.comment": "Section 2 of text for including dynamic content section",
-  "_cCYmTK.comment": "Button text for opening the configuration",
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
   "_cK2A/V.comment": "Text for view docs button",
   "_cT2MlP.comment": "Timezone value ",
@@ -1545,7 +1546,6 @@
   "c3G/zq": "Returns an object with a property set to the provided value",
   "c6XbVI": "panel",
   "c8UPLp": "Dynamic content may also be added from other sources.",
-  "cCYmTK": "Configuration",
   "cJm+ah": "Required. The value to search the index of.",
   "cK2A/V": "View Documentation",
   "cT2MlP": "(UTC+11:00) Chokurdakh",
