--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -110,17 +110,16 @@
   "4Q7WzU": "Add a new connection",
   "4XdZNj": "(UTC+01:00) West Central Africa",
   "4YKQAF": "Required. The unit of time specified in the interval.",
+  "4aaixN": "Tour",
   "4c0uPQ": "Required. The name of the parameter whose values you want.",
   "4cVuMw": "Comments can only be added while editing the inputs of a step.",
   "4j2MEv": "Toggle Minimap",
   "4pm5yw": "Button to add dynamic content if TokenPicker is hidden",
   "4vcnOA": "Returns the minimum value in the input array of numbers",
   "4vmGh0": "Service request ID",
-  "4wavwk": "Tour/Tutorial",
   "4wjJs0": "14",
   "4yC+4g": "Action Type",
   "5J7j9k": "Required. The XPath expression to evaluate.",
-  "5P8UWJ": "Select a source schema",
   "5SAQOb": "Authority",
   "5aa76N": "Returns the first element in the array or string passed in",
   "5b0sKi": "Returns true if an object, array, or string is empty",
@@ -145,6 +144,7 @@
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
+  "7WVgiU": "Configure",
   "7ZR1xr": "Add an action",
   "7aJqIH": "Optional. The locale to be used when formatting (defaults to 'en-us').",
   "7k9jXx": "Status code",
@@ -265,7 +265,6 @@
   "Fh2HDb": "Returns the first index of a value within a string (case-insensitive, invariant culture)",
   "FiyQjU": "2",
   "FslNgF": "Status",
-  "FuXqJI": "Update target schema",
   "G/CC5/": "Invalid split on format in '{splitOn}'.",
   "G0XYrd": "Required. The string that may contain the value.",
   "GAY7b8": "Returns the query from a URI",
@@ -295,6 +294,7 @@
   "IQyOth": "If available, dynamic content is automatically generated from the connectors and actions you choose for your flow.",
   "IUE/lQ": "(UTC-01:00) Cabo Verde Is.",
   "IW2MjQ": "Converts a string timestamp passed in from a UTC to a target time zone",
+  "IXy91L": "Add a target schema",
   "Ie4sUt": "Configure",
   "IgNz8Y": "Action",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
@@ -429,6 +429,7 @@
   "QePi+D": "Data type",
   "QknZQ1": "Loading...",
   "Qn8qxn": "Returns a string in date format",
+  "QnPHOB": "Add target schema",
   "QpRRt3": "Required. The string to delimit items with.",
   "QrQDdp": "Required. A string containing the unit of time specified in the interval to subtract.",
   "Qu1HkA": "{hours}h",
@@ -508,7 +509,6 @@
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
   "WS9kXD": "Required. The first integer in the array.",
-  "WTTJ89": "Select a target schema",
   "WUe3DY": "Shorthand for trigger().outputs",
   "WgoP7R": "Returns the result from multiplying the two numbers",
   "WnU9v0": "A managed identity is not configured on the logic app.",
@@ -666,17 +666,16 @@
   "_4Q7WzU.comment": "Aria label description for add button",
   "_4XdZNj.comment": "Timezone value ",
   "_4YKQAF.comment": "Required string parameter to represent the unit of time",
+  "_4aaixN.comment": "Button text for tour and tutorial",
   "_4c0uPQ.comment": "Required string parameter to create a new parameter",
   "_4cVuMw.comment": "Text to tell users why a comment is disabled",
   "_4j2MEv.comment": "Turn the minimap on or off",
   "_4pm5yw.comment": "Text for if image does not show up",
   "_4vcnOA.comment": "Label for description of custom min Function",
   "_4vmGh0.comment": "Label text for retry service request ID",
-  "_4wavwk.comment": "Button text for tour and tutorial",
   "_4wjJs0.comment": "Hour of the day",
   "_4yC+4g.comment": "Filter by action type",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
-  "_5P8UWJ.comment": "label to inform to select source schema to be used",
   "_5SAQOb.comment": "Authority Label Display Name",
   "_5aa76N.comment": "Label for description of custom first Function",
   "_5b0sKi.comment": "Label for description of custom empty Function",
@@ -701,6 +700,7 @@
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
+  "_7WVgiU.comment": "Button text for opening the configuration",
   "_7ZR1xr.comment": "Text on example action node",
   "_7aJqIH.comment": "Optional locale parameter to apply formatNumber function with",
   "_7k9jXx.comment": "Label text for response status code",
@@ -821,7 +821,6 @@
   "_Fh2HDb.comment": "Label for description of custom indexOf Function",
   "_FiyQjU.comment": "Hour of the day",
   "_FslNgF.comment": "Column header text for status",
-  "_FuXqJI.comment": "header message for adding target schema",
   "_G/CC5/.comment": "Error message for invalid split on value.",
   "_G0XYrd.comment": "Required text parameter to apply nthIndexOf function on",
   "_GAY7b8.comment": "Label for description of custom uriQuery Function",
@@ -851,6 +850,7 @@
   "_IQyOth.comment": "Section 1 of text for including dynamic content section",
   "_IUE/lQ.comment": "Timezone value ",
   "_IW2MjQ.comment": "Label for description of custom convertFromUtc Function",
+  "_IXy91L.comment": "label to inform to add a target schema to be used",
   "_Ie4sUt.comment": "Header text to inform users this panel is for configuration",
   "_IgNz8Y.comment": "Badge showing an action is a logic apps action",
   "_IjZFjQ.comment": "Timezone value ",
@@ -985,6 +985,7 @@
   "_QePi+D.comment": "Data type of current node",
   "_QknZQ1.comment": "This is a message shown while loading. This is announced text that is said out loud with screen readers. Not shown in text.",
   "_Qn8qxn.comment": "Label for description of custom formatDateTime Function",
+  "_QnPHOB.comment": "header message for adding target schema",
   "_QpRRt3.comment": "Required string parameter to separate objects and join function on",
   "_QrQDdp.comment": "Required string parameter to represent the unit of time",
   "_Qu1HkA.comment": "This is a period in time in hours. {hours} is replaced by the number and h is an abbreviation of hours",
@@ -1064,7 +1065,6 @@
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
   "_WS9kXD.comment": "Required number parameter to identify lower bound in range function",
-  "_WTTJ89.comment": "label to inform to select target schema to be used",
   "_WUe3DY.comment": "Label for description of custom triggerOutputs Function",
   "_WgoP7R.comment": "Label for description of custom mul Function",
   "_WnU9v0.comment": "Error message when no identity is associated",
@@ -1133,6 +1133,7 @@
   "_ba9yGJ.comment": "Button text for loading more runs",
   "_bf7078.comment": "Label for description of custom max Function",
   "_bnStSJ.comment": "Timezone value ",
+  "_brtCAE.comment": "header message for adding source schema",
   "_bwfJdj.comment": "Text to show which node the target node is run after",
   "_bx3qeC.comment": "Timezone value ",
   "_bxhkTi.comment": "Test tab parameters description",
@@ -1143,7 +1144,6 @@
   "_c3G/zq.comment": "Label for description of custom setProperty Function",
   "_c6XbVI.comment": "label for panel component",
   "_c8UPLp.comment": "Section 2 of text for including dynamic content section",
-  "_cCYmTK.comment": "Button text for opening the configuration",
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
   "_cK2A/V.comment": "Text for view docs button",
   "_cT2MlP.comment": "Timezone value ",
@@ -1176,7 +1176,6 @@
   "_dxh2CJ.comment": "timed out run",
   "_e00zot.comment": "Recurrence parameter group title",
   "_e4Onhn.comment": "This is a status message to be shown in a monitoring view",
-  "_eCkaMR.comment": "header message for adding source schema",
   "_eGa1Wa.comment": "Timezone value ",
   "_eHgi14.comment": "Required string parameter to determine variable wanted",
   "_eRvGw3.comment": "Message to show under the loading icon when loading connectors",
@@ -1256,6 +1255,7 @@
   "_jKsMS6.comment": "Required expression parameter to apply not function",
   "_jMLmag.comment": "Button to add a new connection",
   "_jQ0Aqj.comment": "Required parameter to be converted using string function",
+  "_jQjteB.comment": "label to inform to add a source schema to be used",
   "_jVpanH.comment": "Required base64 string parameter to be decoded using decodeBase64 function",
   "_jcA3Ig.comment": "Required string parameter to be used as key for formDataMultiValues function",
   "_jfInxm.comment": "Parameter Link Text",
@@ -1535,6 +1535,7 @@
   "ba9yGJ": "Load more",
   "bf7078": "Returns the maximum value in the input array of numbers",
   "bnStSJ": "(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi",
+  "brtCAE": "Add source schema",
   "bwfJdj": "Run after {sourceNodeId}",
   "bx3qeC": "(UTC-03:00) Brasilia",
   "bxhkTi": "Provide parameters to test the output.",
@@ -1545,7 +1546,6 @@
   "c3G/zq": "Returns an object with a property set to the provided value",
   "c6XbVI": "panel",
   "c8UPLp": "Dynamic content may also be added from other sources.",
-  "cCYmTK": "Configuration",
   "cJm+ah": "Required. The value to search the index of.",
   "cK2A/V": "View Documentation",
   "cT2MlP": "(UTC+11:00) Chokurdakh",
@@ -1578,7 +1578,6 @@
   "dxh2CJ": "timed out",
   "e00zot": "How often do you want to check for items?",
   "e4Onhn": "Not specified",
-  "eCkaMR": "Update source schema",
   "eGa1Wa": "(UTC+05:00) Ekaterinburg",
   "eHgi14": "Required. The name of the variable whose value you want.",
   "eRvGw3": "Loading connectors...",
@@ -1658,6 +1657,7 @@
   "jKsMS6": "Required. The expression that will be negated.",
   "jMLmag": "Create New",
   "jQ0Aqj": "Required. The value that is converted to a string.",
+  "jQjteB": "Add a source schema",
   "jVpanH": "Required. A base64 input string.",
   "jcA3Ig": "Required. The key name of the form data values to return.",
   "jfInxm": "Edit in JSON",
