[DM] Breadcrumb copy update (#1133)
Breadcrumb copy update

Co-authored-by: Nicolas Layne <nicolaslayne@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -53,7 +53,6 @@
   "1R6Vaa": "{count, plural, one {# item matched.} =0 {no items matched.} other {# items matched.}}",
   "1TE0e8": "Required. The value to search the index of.",
   "1VRGCF": "Specify one or more expressions which must be true for the trigger to fire.",
-  "1X4U/1": "Show code view",
   "1ZDLZA": "Learn more",
   "1ZSzl6": "Each run after configuration must have at least one status checked",
   "1ejxkP": "Secure Inputs",
@@ -357,6 +356,7 @@
   "MYgKHu": "Actions",
   "Mb+Eaq": "Bool",
   "Mb/Vp8": "Next failed",
+  "MirIsS": "Show code",
   "MmBfD1": "Unexpected error",
   "MnThTq": "Insert function",
   "N0pS6Y": "Target schema",
@@ -483,6 +483,7 @@
   "UCNM4L": "To reference a parameter, use the dynamic content list.",
   "UEryJE": "Delete Workflow Action",
   "UHCVNK": "Replaces a string with a given string",
+  "UR1CS5": "Hide code",
   "USVffu": "Content not shown due to security configuration.",
   "UYRIS/": "{fileName} (file name)",
   "Ur+wph": "Click to delete item",
@@ -609,7 +610,6 @@
   "_1R6Vaa.comment": "This is announced text that is said out loud with screen readers. Not shown in text.",
   "_1TE0e8.comment": "Required text parameter to search indexOf function with",
   "_1VRGCF.comment": "description of tigger confition expression setting",
-  "_1X4U/1.comment": "Button to display the code view",
   "_1ZDLZA.comment": "Text for learn more link",
   "_1ZSzl6.comment": "error message for deselection of last run after status",
   "_1ejxkP.comment": "title for the secure inputs setting",
@@ -913,6 +913,7 @@
   "_MYgKHu.comment": "Heading for a tooltip explaining Actions",
   "_Mb+Eaq.comment": "This is an option in a dropdown where users can select type Boolean for their parameter.",
   "_Mb/Vp8.comment": "Button indicating to go to the next page with failed options",
+  "_MirIsS.comment": "Button to display the code view",
   "_MmBfD1.comment": "This is the default message shown in case of an error. It can be shown in multiple contexts but generally would be a notification",
   "_MnThTq.comment": "Message to insert function",
   "_N0pS6Y.comment": "Target schema",
@@ -1039,6 +1040,7 @@
   "_UCNM4L.comment": "Description for Workflow Parameters Part 2",
   "_UEryJE.comment": "Title for operation node",
   "_UHCVNK.comment": "Label for description of custom replace Function",
+  "_UR1CS5.comment": "Button to hide the code view",
   "_USVffu.comment": "Message text to inform the customer that the data is secure",
   "_UYRIS/.comment": "Title for file name parameter",
   "_Ur+wph.comment": "Label for delete button",
