Update tooltips for Canvas controls and toolbox

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -59,7 +59,9 @@
   "1ejxkP": "Secure Inputs",
   "1htSs7": "Off",
   "1jhzOM": "Required. The object to check if it is less than value being compared to.",
+  "1nODUD": "Hide functions",
   "1nvvw1": "Enter the value of the Authorization header",
+  "1pjO9s": "Hide source schema",
   "1uGBLP": "5",
   "1zgFh1": "Dismiss",
   "1zmMYu": "(UTC-04:00) Caracas",
@@ -221,6 +223,7 @@
   "CsPY74": "Credential Type",
   "Cy9qeQ": "(UTC+02:00) Helsinki, Kyiv, Riga, Sofia, Tallinn, Vilnius",
   "D+Ptnq": "Returns the path and query from a URI",
+  "D/xTXV": "Show source schema",
   "D1lgsT": "Required. The string from which to remove leading and trailing whitespace.",
   "D5FIKL": "Paste from sample",
   "DDIIAQ": "Node",
@@ -228,6 +231,7 @@
   "DWsh56": "Enter client ID",
   "DZZ3fj": "Duration",
   "DfS13/": "(UTC-10:00) Aleutian Islands",
+  "Dhu3IS": "Show mini-map",
   "DsPDVB": "Trigger condition cannot be empty",
   "DuXV2M": "(UTC-01:00) Azores",
   "DyYcJZ": "Run After",
@@ -413,6 +417,7 @@
   "PfCJlN": "Workflow functions",
   "PmB0J7": "(UTC-04:00) Turks and Caicos",
   "PtqSHp": "Do not generate if no value",
+  "PvWTxR": "Show functions",
   "Pvm0xB": "Returns the base 64 representation of the input string",
   "Q+oELo": "(UTC+04:00) Izhevsk, Samara",
   "Q/7unA": "Object",
@@ -615,7 +620,9 @@
   "_1ejxkP.comment": "title for the secure inputs setting",
   "_1htSs7.comment": "label when setting is off",
   "_1jhzOM.comment": "Required object parameter to compare to in greater function",
+  "_1nODUD.comment": "Label to close Functions list",
   "_1nvvw1.comment": "Raw Value Placeholder Text",
+  "_1pjO9s.comment": "Label to close source schema toolbox",
   "_1uGBLP.comment": "Hour of the day",
   "_1zgFh1.comment": "Label for dismiss button in panel header",
   "_1zmMYu.comment": "Timezone value ",
@@ -777,6 +784,7 @@
   "_CsPY74.comment": "Authentication OAuth Type Label",
   "_Cy9qeQ.comment": "Timezone value ",
   "_D+Ptnq.comment": "Label for description of custom uriPathAndQuery Function",
+  "_D/xTXV.comment": "Label to open source schema toolbox",
   "_D1lgsT.comment": "Required text parameter to apply trim function with",
   "_D5FIKL.comment": "Paste from sample",
   "_DDIIAQ.comment": "Title for other node",
@@ -784,6 +792,7 @@
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DZZ3fj.comment": "Column header text for duration",
   "_DfS13/.comment": "Timezone value ",
+  "_Dhu3IS.comment": "Label to show the mini-map",
   "_DsPDVB.comment": "error message for empty trigger condition",
   "_DuXV2M.comment": "Timezone value ",
   "_DyYcJZ.comment": "title for run after setting section",
@@ -969,6 +978,7 @@
   "_PfCJlN.comment": "Label for workflow functions",
   "_PmB0J7.comment": "Timezone value ",
   "_PtqSHp.comment": "Checkbox label to not generate if no value",
+  "_PvWTxR.comment": "Label to open Functions list",
   "_Pvm0xB.comment": "Label for description of custom base64 Function",
   "_Q+oELo.comment": "Timezone value ",
   "_Q/7unA.comment": "This is an option in a dropdown where users can select type Object for their parameter.",
@@ -1117,7 +1127,6 @@
   "_aGyVJT.comment": "Required number parameter to get number of objects to remove for skip function",
   "_aH9SV7.comment": "Timezone value ",
   "_aK4iLW.comment": "title for data handling setting section",
-  "_aL0Uut.comment": "Label to open the Function card",
   "_aRKDWL.comment": "Error message for creating a connection",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
@@ -1261,7 +1270,6 @@
   "_jfInxm.comment": "Parameter Link Text",
   "_jgOaTX.comment": "Error Message on generating schema based on payload",
   "_jjYA4u.comment": "Error message to show when reference format is unsupported, {referenceKeyFormat} will be replaced based on action definition",
-  "_jsEMSu.comment": "Label to open the input toolbox card",
   "_juR40n.comment": "label for request options input",
   "_juvF+0.comment": "Gateway dropdown label",
   "_k/oqFL.comment": "Required base64 string parameter to be converted using base64ToString function",
@@ -1270,7 +1278,6 @@
   "_kDsud+.comment": "Timezone value ",
   "_kHcCxH.comment": "This is a time duration in abbreviated format",
   "_kN6kce.comment": "Label for description of custom decodeBase64 Function",
-  "_kV/U0C.comment": "Label to toggle the mini map",
   "_kYivbS.comment": "Link text for the prompt to download large inputs or outputs",
   "_kZCX7t.comment": "Day of the week",
   "_kZuYgD.comment": "Label for description of custom less Function",
@@ -1328,6 +1335,7 @@
   "_o/0SEj.comment": "Label for description of custom last Function",
   "_o14STH.comment": "Required XML parameter to apply xpath function on",
   "_o1HOyf.comment": "Accessibility label telling that the user is on page {current} of {max} pages",
+  "_o3SfI4.comment": "Label to fit the whole canvas in view",
   "_oAFcW6.comment": "Required string parameter to be decoded using decodeDataUri function",
   "_oLtwMw.comment": "title for content transfer setting",
   "_oM6q96.comment": "Text for the Browse Operations page navigation heading",
@@ -1453,7 +1461,6 @@
   "_vwH/XV.comment": "Create Parameter Text",
   "_vz2gZC.comment": "Header text for workflow properties",
   "_w5Hhig.comment": "Day of the week",
-  "_w9OL8U.comment": "Label to fit the whole canvas in view",
   "_wEaGWn.comment": "Label for description of custom subtractFromTime Function",
   "_wF7C+h.comment": "Button to cancel a connection",
   "_wFCkpM.comment": "Require parameters to find minimum using min function",
@@ -1464,6 +1471,7 @@
   "_wQsEwc.comment": "Required length parameter to obtain substring",
   "_wV3Lmd.comment": "Label to delete dictionary item",
   "_wWVQuK.comment": "Label for description of custom if Function",
+  "_wl7X0l.comment": "Label to hide the mini-map",
   "_wmDUGV.comment": "Label for description of custom convertToUtc Function",
   "_wmw/ai.comment": "Label for description of custom union Function",
   "_woJQhv.comment": "Label text for callback URL",
@@ -1519,7 +1527,6 @@
   "aGyVJT": "Required. The number of objects to remove from the front of Collection. Must be a positive integer.",
   "aH9SV7": "(UTC+05:00) Ashgabat, Tashkent",
   "aK4iLW": "Data Handling",
-  "aL0Uut": "Function",
   "aRKDWL": "Failed with error: {errorMessage}. Please sign in again.",
   "ahsVI/": "Enter Pfx",
   "auUI93": "Add or select a source schema to use for your map.",
@@ -1663,7 +1670,6 @@
   "jfInxm": "Edit in JSON",
   "jgOaTX": "Unable to generate schema",
   "jjYA4u": "Unsupported manifest connection reference format: '{referenceKeyFormat}'",
-  "jsEMSu": "Toolbox",
   "juR40n": "Duration",
   "juvF+0": "Gateway",
   "k/oqFL": "Required. The base64 encoded string.",
@@ -1672,7 +1678,6 @@
   "kDsud+": "(UTC-03:00) Cayenne, Fortaleza",
   "kHcCxH": "{minutes}m {seconds}s",
   "kN6kce": "Returns a string representation of an input based64 string",
-  "kV/U0C": "Display mini map",
   "kYivbS": "Download (Alt/Option + click)",
   "kZCX7t": "Monday",
   "kZuYgD": "Returns true if the first argument is less than the second",
@@ -1730,6 +1735,7 @@
   "o/0SEj": "Returns the last element in the array or string passed in",
   "o14STH": "Required. The XML on which to evaluate the XPath expression.",
   "o1HOyf": "{current_page} of {max_page}",
+  "o3SfI4": "Zoom to fit",
   "oAFcW6": "Required. The dataURI to decode into a binary representation.",
   "oLtwMw": "Content Transfer",
   "oM6q96": "Browse Operations",
@@ -1855,7 +1861,6 @@
   "vwH/XV": "Create parameter",
   "vz2gZC": "Workflow Properties",
   "w5Hhig": "Sunday",
-  "w9OL8U": "Page fit",
   "wEaGWn": "Subtracts an integer number of a specified unit of time from a string timestamp passed in",
   "wF7C+h": "Cancel",
   "wFCkpM": "Required. Either an array of values to find the minimum value, or the first value of a set.",
@@ -1866,6 +1871,7 @@
   "wQsEwc": "Required. The length of the substring.",
   "wV3Lmd": "Click to delete item",
   "wWVQuK": "Returns a specified value based on whether the expression resulted in true or false",
+  "wl7X0l": "Hide mini-map",
   "wmDUGV": "Converts a string timestamp passed in from a source time zone to UTC",
   "wmw/ai": "Returns a single array or object with all the elements that are in either the array or object passed to this function",
   "woJQhv": "Callback URL:",
