Add placeholder when no schema has been added

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1,5 +1,6 @@
 {
   "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
+  "+3efoo": "No schema is added",
   "+W9fkq": "(UTC+08:00) Kuala Lumpur, Singapore",
   "+dlOgj": "(UTC-05:00) Haiti",
   "+g+mch": "Returns the body for a part in a multipart output of an action",
@@ -281,6 +282,7 @@
   "H1wnHr": "Required. The string to slice.",
   "H7t3Pm": "Target schema will be replaced and you will not be able to go back to previous changes. Do you want to proceed to change target schema?",
   "H8bEUn": "Required. The number that Subtrahend is removed from.",
+  "HBWyxc": "Pencil icon",
   "HDqP2g": "Required. The key name of the form data value to return.",
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
@@ -439,6 +441,7 @@
   "RPSKbr": "Enter audience",
   "RX2Shm": "Required. The string that is split.",
   "RZ1MIN": "Switch to input entire array",
+  "RZO5Ic": "Add or replace your schemas.",
   "RhH4pF": "{minutes, plural, one {# minute} other {# minutes}}",
   "RkgScy": "6",
   "Rno87I": "Do you want to discard all unsaved changes?",
@@ -486,6 +489,7 @@
   "UR1CS5": "Hide code",
   "USVffu": "Content not shown due to security configuration.",
   "UYRIS/": "{fileName} (file name)",
+  "UnrrzF": "Source schema",
   "Ur+wph": "Click to delete item",
   "UtyRCH": "Enter a name for the connection",
   "V+/c21": "General",
@@ -557,6 +561,7 @@
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
+  "_+3efoo.comment": "Placeholder when no schema has been added",
   "_+W9fkq.comment": "Timezone value ",
   "_+dlOgj.comment": "Timezone value ",
   "_+g+mch.comment": "Label for description of custom multipartBody Function",
@@ -838,6 +843,7 @@
   "_H1wnHr.comment": "Required string parameter to slice",
   "_H7t3Pm.comment": "Change target schema text",
   "_H8bEUn.comment": "Required number parameter to be minused in sub function",
+  "_HBWyxc.comment": "Icon to click to edit the schema selection, pressing will lead to a selection panel page",
   "_HDqP2g.comment": "Required string parameter to be used as key for triggerFormDataValue function",
   "_HJIZrG.comment": "Diagnostics information on error message",
   "_HQ8/tk.comment": "Text for if image does not show up",
@@ -996,6 +1002,7 @@
   "_RPSKbr.comment": "Audience Placeholder Text",
   "_RX2Shm.comment": "Required text parameter to apply split function on",
   "_RZ1MIN.comment": "Label for switching input to Text",
+  "_RZO5Ic.comment": "Label to inform the ability to replace schemas",
   "_RhH4pF.comment": "A duration of time shown in minutes",
   "_RkgScy.comment": "Hour of the day",
   "_Rno87I.comment": "Discard warning text",
@@ -1043,6 +1050,7 @@
   "_UR1CS5.comment": "Button to hide the code view",
   "_USVffu.comment": "Message text to inform the customer that the data is secure",
   "_UYRIS/.comment": "Title for file name parameter",
+  "_UnrrzF.comment": "Label to inform the below schema name is for source schema",
   "_Ur+wph.comment": "Label for delete button",
   "_UtyRCH.comment": "Placeholder text for connection name input",
   "_V+/c21.comment": "title for general setting section",
@@ -1150,7 +1158,6 @@
   "_cK2A/V.comment": "Text for view docs button",
   "_cT2MlP.comment": "Timezone value ",
   "_cVIZTQ.comment": "Timezone value ",
-  "_cbL6Gv.comment": "label to inform the ability to replace schemas",
   "_cgq/+y.comment": "Placehodler text for dropdown",
   "_ci6ex1.comment": "Value Title",
   "_cj+kyo.comment": "This is a status message to be shown in a monitoring view",
@@ -1167,7 +1174,6 @@
   "_dSTRb/.comment": "description of content transfer setting",
   "_dUZi34.comment": "Timezone value ",
   "_dWFyfN.comment": "description of the secure inputs setting",
-  "_dWeRGU.comment": "icon to click to edit the schema selection, pressing will lead to a selection panel page",
   "_dWx21B.comment": "Timezone value ",
   "_daoo3l.comment": "Text to show which connection is connected to the node",
   "_dgAu27.comment": "Timezone value ",
@@ -1193,7 +1199,6 @@
   "_fBQBw/.comment": "Label for description of custom greaterOrEquals Function",
   "_fDisLL.comment": "Error while creating acl",
   "_fGcSFd.comment": "error message for max-exceeding paging count",
-  "_fLSetk.comment": "label to inform the below schema name is for source schema",
   "_faSDuD.comment": "Timezone value ",
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
@@ -1258,6 +1263,7 @@
   "_jMLmag.comment": "Button to add a new connection",
   "_jQ0Aqj.comment": "Required parameter to be converted using string function",
   "_jQjteB.comment": "label to inform to add a source schema to be used",
+  "_jUDhbs.comment": "Label to inform the below schema name is for target schema",
   "_jVpanH.comment": "Required base64 string parameter to be decoded using decodeBase64 function",
   "_jcA3Ig.comment": "Required string parameter to be used as key for formDataMultiValues function",
   "_jfInxm.comment": "Parameter Link Text",
@@ -1503,7 +1509,6 @@
   "_z9kH+0.comment": "Text for delete node modal body",
   "_zBMVKg.comment": "Required string parameter to be converted using decimal function",
   "_zCsGWP.comment": "Placeholder text for Value",
-  "_zGRgUE.comment": "label to inform the below schema name is for target schema",
   "_zIDVd9.comment": "Required string parameter to be converted using json function",
   "_zTKAc9.comment": "Select Actions",
   "_zUgja+.comment": "Label for button to clear the editor",
@@ -1552,7 +1557,6 @@
   "cK2A/V": "View Documentation",
   "cT2MlP": "(UTC+11:00) Chokurdakh",
   "cVIZTQ": "(UTC+02:00) Tripoli",
-  "cbL6Gv": "Add or replace your schemas.",
   "cgq/+y": "Please select an identity",
   "ci6ex1": "Value",
   "cj+kyo": "Cancelled",
@@ -1569,7 +1573,6 @@
   "dSTRb/": "Specify the behavior and capabilities for transferring content over HTTP. Large messages may be split up into smaller requests to the connector to allow large message upload. Details can be found at http://aka.ms/logicapps-chunk#upload-content-in-chunks",
   "dUZi34": "(UTC+12:45) Chatham Islands",
   "dWFyfN": "Secure inputs of the operation.",
-  "dWeRGU": "pencil icon",
   "dWx21B": "(UTC+11:00) Sakhalin",
   "daoo3l": "Connected to {connectionName}.",
   "dgAu27": "(UTC-03:00) Greenland",
@@ -1595,7 +1598,6 @@
   "fBQBw/": "Returns true if the first argument is greater than or equal to the second",
   "fDisLL": "Acl creation failed for connection. Deleting the connection.",
   "fGcSFd": "Paging count exceeds maximum value",
-  "fLSetk": "Source schema",
   "faSDuD": "(UTC+04:00) Port Louis",
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
@@ -1660,6 +1662,7 @@
   "jMLmag": "Create New",
   "jQ0Aqj": "Required. The value that is converted to a string.",
   "jQjteB": "Add a source schema",
+  "jUDhbs": "Target schema",
   "jVpanH": "Required. A base64 input string.",
   "jcA3Ig": "Required. The key name of the form data values to return.",
   "jfInxm": "Edit in JSON",
@@ -1905,7 +1908,6 @@
   "z9kH+0": "This will also remove all child steps.",
   "zBMVKg": "Required. The value that is converted to a decimal number.",
   "zCsGWP": "Enter value",
-  "zGRgUE": "Target schema",
   "zIDVd9": "Required. The string that is converted to a native type value.",
   "zTKAc9": "Select Actions",
   "zUgja+": "Clear custom value",
