--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1268,6 +1268,7 @@
   "_k5tGEr.comment": "This is the boolean value for Yes",
   "_kDsud+.comment": "Timezone value ",
   "_kHcCxH.comment": "This is a time duration in abbreviated format",
+  "_kM+Mr0.comment": "Loading text when items are being fetched",
   "_kN6kce.comment": "Label for description of custom decodeBase64 Function",
   "_kV/U0C.comment": "Label to toggle the mini map",
   "_kYivbS.comment": "Link text for the prompt to download large inputs or outputs",
@@ -1669,6 +1670,7 @@
   "k5tGEr": "Yes",
   "kDsud+": "(UTC-03:00) Cayenne, Fortaleza",
   "kHcCxH": "{minutes}m {seconds}s",
+  "kM+Mr0": "Loading...",
   "kN6kce": "Returns a string representation of an input based64 string",
   "kV/U0C": "Display mini map",
   "kYivbS": "Download (Alt/Option + click)",
