Adding loading indicator in combobox and dynamic load code path fixes (#1157)
* Fixing settings and spliton for new triggers

* Adding loading indicator and error message combobox

* Fixing dynamic load for connectors with no connections

Co-authored-by: Priti Sambandam <psamband@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1285,6 +1285,7 @@
   "_k5tGEr.comment": "This is the boolean value for Yes",
   "_kDsud+.comment": "Timezone value ",
   "_kHcCxH.comment": "This is a time duration in abbreviated format",
+  "_kM+Mr0.comment": "Loading text when items are being fetched",
   "_kN6kce.comment": "Label for description of custom decodeBase64 Function",
   "_kYivbS.comment": "Link text for the prompt to download large inputs or outputs",
   "_kZCX7t.comment": "Day of the week",
@@ -1682,6 +1683,7 @@
   "k5tGEr": "Yes",
   "kDsud+": "(UTC-03:00) Cayenne, Fortaleza",
   "kHcCxH": "{minutes}m {seconds}s",
+  "kM+Mr0": "Loading...",
   "kN6kce": "Returns a string representation of an input based64 string",
   "kYivbS": "Download (Alt/Option + click)",
   "kZCX7t": "Monday",
