Refactor panel views

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -284,7 +284,6 @@
   "H17jEE": "URI parsing functions",
   "H1wnHr": "Required. The string to slice.",
   "H8bEUn": "Required. The number that Subtrahend is removed from.",
-  "HBWyxc": "Pencil icon",
   "HDqP2g": "Required. The key name of the form data value to return.",
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
@@ -430,6 +429,7 @@
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
   "QbJDi7": "Item",
+  "QdJUaS": "Pencil icon",
   "QeE0k/": "Required. The value that is converted to binary.",
   "QePi+D": "Data type",
   "QknZQ1": "Loading...",
@@ -847,7 +847,6 @@
   "_H17jEE.comment": "Label for URI parsing functions",
   "_H1wnHr.comment": "Required string parameter to slice",
   "_H8bEUn.comment": "Required number parameter to be minused in sub function",
-  "_HBWyxc.comment": "Icon to click to edit the schema selection, pressing will lead to a selection panel page",
   "_HDqP2g.comment": "Required string parameter to be used as key for triggerFormDataValue function",
   "_HJIZrG.comment": "Diagnostics information on error message",
   "_HQ8/tk.comment": "Text for if image does not show up",
@@ -993,6 +992,7 @@
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
   "_QbJDi7.comment": "Label for single item inside an array.",
+  "_QdJUaS.comment": "Pencil icon aria label",
   "_QeE0k/.comment": "Required string parameter to be converted using binary function",
   "_QePi+D.comment": "Data type of current node",
   "_QknZQ1.comment": "This is a message shown while loading. This is announced text that is said out loud with screen readers. Not shown in text.",
